[package]
name = "gemini-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 
[dependencies.russenger]
git = "https://github.com/j03-dev/russenger"
branch = "dev"
features = [ "sqlite" ] 

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
